--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="motox3m.html">moto x3m</a>
       <a href="snowrider.html">snow rider 3d</a>
       <a href="1v1lol.html">1v1 lol</a>
+      <a href="slope.html">slope</a>
 
         
         <a id="aboutblank" onclick="aboutblank()" class="fade-in"><button id="aboutblank" class="fade-in homebutton">Open in
